--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">Minesweeper</string>
     <string name="action_new_game">New game</string>
-    <string name="action_settings">Settings</string>
+    <string name="beginner">Beginner</string>
+    <string name="intermediate">Intermediate</string>
+    <string name="expert">Expert</string>
     <string name="you_win">You win!</string>
     <string name="you_lose">You lose!</string>
 </resources>
